force-app/main/default/objects/Hearing_Liability__c/fields/Hearing__c.field-meta.xml
<CustomField>
    <fullName>Hearing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a link to the hearing for this liability.</description>
    <inlineHelpText>This is a link to the hearing for this liability.</inlineHelpText>
    <label>Hearing</label>
    <referenceTo>Hearing__c</referenceTo>
    <relationshipLabel>Hearing Liabilities</relationshipLabel>
    <relationshipName>Hearing_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>