force-app/main/default/objects/Hearing_Liability__c/fields/Hearing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Notes__c</fullName>
    <inlineHelpText>Notes entered when recording hearing results.</inlineHelpText>
    <label>Hearing Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>