force-app/main/default/objects/Hearing_Liability__c/fields/Liability_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Liability_Appeal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Liability Appeal Record that must exist in order to schedule a Hearing against it.</description>
    <inlineHelpText>This is the Liability Appeal Record that must exist in order to schedule a Hearing against it.</inlineHelpText>
    <label>Liability Appeal</label>
    <referenceTo>Liability_Appeal__c</referenceTo>
    <relationshipLabel>Hearing Liabilities</relationshipLabel>
    <relationshipName>Hearing_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>