force-app/main/default/objects/Hearing_Liability__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <description>The results of the Hearing for this Liability</description>
    <inlineHelpText>The results of the Hearing for this Liability</inlineHelpText>
    <label>Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled for Hearing</fullName>
                <default>true</default>
                <label>Scheduled for Hearing</label>
            </value>
            <value>
                <fullName>Affirmed</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Modified per BOFE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>